<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CommonRide</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_single_ride">Ride details</string>
    <string name="ride_origin"></string>
    <string name="title_activity_add_ride">Share New Ride</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="pick_date">Pick a date</string>
    <string name="pick_time">Pick a time</string>
    <string name="facebook_app_id">1556185537963080</string>
    <string name="action_search">Search</string>
    <string name="action_add">Add</string>
    <string name="action_join_delete">Delete</string>
    <string name="action_register">Register</string>
    <string name="action_refresh">Refresh</string>
    <string name="dialog_confirm">Confirm</string>
    <string name="dialog_message_confirm_join_delete">Passengers will be informed about removal</string>
    <string name="dialog_title_confirm_join_delete">Delete this ride?</string>
    <string name="search_hint">Search CommonRide</string>
    <string name="fromText">From:</string>
    <string name="toText">To:</string>
    <string name="whenText">When:</string>
    <string name="passengersText">Passengers</string>
    <string name="driver_caption">Driver</string>
    <string name="ride_caption">Ride</string>
    <string name="saveText">Save</string>
    <string name="contentDescriptionAddRide">Add new ride</string>
    <string name="common_rides">Common Ride</string>
    <string name="no_phone_number">Provide your phone number. You may prefer to not share it with others by switching off the following indicator</string>
    <string name="no_registration_code">Provide the registration code</string>
    <string name="no_to_location">Type the address</string>
    <string name="no_from_location">Type the address</string>
    <string name="ride_desc"> offers a ride</string>
    <string name="no_free_places">Allow for at least 1 passenger</string>
    <string name="notes">Notes</string>

    <string-array name="drawers_array">
        <item>Settings</item>
        <item>My rides</item>
        <item>Rating</item>
        <item>Logout</item>
        <item>About</item>
    </string-array>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="title_activity_ride_map">RideMapActivity</string>
    <string name="action_join_ride">Join</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="title_activity_my_rides">My Rides</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="registration_code">Registration code:</string>
    <string name="settings_user">User Profile</string>
    <string name="settings_prefs">Preferences</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="driverTabCaption">Driver</string>
    <string name="passengerTabCaption">Passenger</string>
    <string name="title_activity_about">About version Alpha 0.7</string>
    <string name="license">Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.</string>
    <string name="copyright">Copyright (C) 2015 Maximum</string>
    <string name="title_activity_tabs">Settings</string>
    <string name="banner_ad_unit_id">ca-app-pub-1910170326360771/1108699642</string>
    <!--<string name="banner_ad_unit_id">ca-app-pub-1910170326360771</string>-->
    <!-- <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string> -->

    <string name="title_activity_rate">RateActivity</string>
    <string name="hello_world">Hello world!</string>

</resources>
