<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item android:id="@+id/action_search"
        android:icon="@drawable/ic_action_search"
        app:showAsAction="always"
        android:actionViewClass="android.widget.SearchView"
        android:title="@string/action_search"/>

    <item android:id="@+id/action_add"
        android:icon="@drawable/ic_action_new"
        app:showAsAction="ifRoom|collapseActionView"
        android:title="@string/action_add" />
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="ifRoom" />
</menu>
